--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.10)
+set(CMAKE_CXX_STANDARD 14)
 project(camera_module)
 
+
+
+# --- 3. ADD SUBDIRECTORIES ---
 add_subdirectory(vp)
 add_subdirectory(sw)
