tessted software hardware iss next

--- a/vp/src/platform/CMakeLists.txt
+++ b/vp/src/platform/CMakeLists.txt
@@ -1,8 +1,4 @@
-add_executable(tb_camera tb_camera.cpp 
-camera.cpp)
-
-add_executable(test_capture test_capture.cpp)
-
+add_executable(tb_camera tb_camera.cpp camera.cpp)
 target_link_libraries(tb_camera 
     PRIVATE 
         SystemC::systemc 
@@ -10,4 +6,5 @@ target_link_libraries(tb_camera
         jpeg 
         Threads::Threads
 )
+
 
